# Nota.Core

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  README_zh.md  TODO.md
.agent/: 2026710133000-refactor-plan.md  README.md  guide.md  notes.md  retrospective.md
crates/nota-cli/: Cargo.toml
crates/nota-cli/assets/plugins/nota-core/: index.js  plugin.json
crates/nota-cli/src/: config_wizard.rs  main.rs
crates/nota-core/: Cargo.toml
crates/nota-core/src/: bus.rs  lib.rs  llm.rs  permissions.rs  tool.rs
crates/nota-core/src/agent/: mod.rs
crates/nota-core/src/persona/: mod.rs
crates/nota-core/src/session/: entity.rs  mod.rs  repository.rs
crates/nota-infra/: Cargo.toml
crates/nota-infra/assets/: providers.toml  solo.md
crates/nota-infra/src/: lib.rs
crates/nota-infra/src/config/: mod.rs
crates/nota-infra/src/http/: admin.rs  api.rs  chat.rs  mod.rs  session.rs  ws.rs
crates/nota-infra/src/llm/: mod.rs
crates/nota-infra/src/persona_store/: mod.rs
crates/nota-infra/src/sqlite/: mod.rs  row.rs
crates/nota-infra/src/tool/: builtin.rs  mod.rs
crates/nota-runtime/: Cargo.toml
crates/nota-runtime/src/: instance.rs  lib.rs  types.rs
migrations/: 20260629130000_init_session_db.sql
src/: lib.rs  main.rs
src/config/: guide.rs  mod.rs
src/connect/: admin.rs  mod.rs  session.rs  sessions.rs
src/persona/: handler.rs  manager.rs  mod.rs
src/session/: db.rs  manager.rs  markdown.rs  mod.rs  participant.rs
