[package]
name = "nota-core"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
# clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
futures-util = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "chrono"] }
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.52", features = ["rt-multi-thread"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["local-time"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5"
