[workspace]
default-members=["crates/nota-cli"]
members = ["crates/nota-core", "crates/nota-infra", "crates/nota-cli"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
