[workspace]
default-members=["crates/nota-cli"]
members = ["crates/nota-core", "crates/nota-infra", "crates/nota-cli", "crates/nota-runtime"]
resolver = "3"

[workspace.lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
unwrap_used = "warn"
todo = "warn"
redundant_clone = "warn"
cloned_instead_of_copied = "warn"
map_unwrap_or = "warn"
large_enum_variant = "warn"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
