[package]
name = "nota-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nota"
path = "src/main.rs"

[dependencies]
nota-core = { path = "../nota-core" }
nota-infra = { path = "../nota-infra" }

anyhow = { workspace = true }
chrono = { workspace = true }

clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
dialoguer = "0.12.0"
tokio = { workspace = true }
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.23" }
