[package]
name = "nota-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
