[package]
name = "nota-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nota-core = { path = "../nota-core" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }

crudly = { version = "0.6", features = ["sqlite"] }
dirs = "6.0.0"
futures-util = "0.3.32"
log = { workspace = true }
serde = { workspace = true }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "fs"] }
tokio-util = "0.7.18"
toml = "1.1.2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5"
