[package]
name = "nota-infra"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nota-core = { path = "../nota-core" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
chrono = { workspace = true }

dirs = "6.0.0"
futures-util = "0.3.32"
log = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1.52", features = ["rt-multi-thread", "fs", "sync"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5"
