[package]
name = "nota-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nota-core = { path = "../nota-core" }

anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
serde.workspace = true
serde_json = "1"
tokio = { workspace = true }
deno_core = "0.408"
walkdir = "2"
